[gd_scene load_steps=15 format=2]

[ext_resource path="res://Scenes/AppleTree.tscn" type="PackedScene" id=1]
[ext_resource path="res://scripts/GamePlay.gd" type="Script" id=2]
[ext_resource path="res://Audio/beep.wav" type="AudioStream" id=3]
[ext_resource path="res://scripts/GamePlayGUI.gd" type="Script" id=4]
[ext_resource path="res://scripts/BeforeGameObstacle.gd" type="Script" id=5]

[sub_resource type="SpatialMaterial" id=1]
albedo_color = Color( 0.345098, 0.458824, 0.282353, 1 )

[sub_resource type="CubeMesh" id=2]
material = SubResource( 1 )
size = Vector3( 30, 2, 30 )

[sub_resource type="BoxShape" id=3]
extents = Vector3( 15, 1, 15 )

[sub_resource type="CubeMesh" id=4]
size = Vector3( 1, 1, 0.1 )

[sub_resource type="ViewportTexture" id=5]
viewport_path = NodePath("GUI/Viewport")

[sub_resource type="SpatialMaterial" id=6]
flags_transparent = true
albedo_color = Color( 1, 0.376471, 0.882353, 0.623529 )

[sub_resource type="CubeMesh" id=7]
material = SubResource( 6 )
size = Vector3( 0.1, 1.5, 2 )

[sub_resource type="BoxShape" id=8]
extents = Vector3( 0.05, 0.75, 1 )

[sub_resource type="ViewportTexture" id=9]
viewport_path = NodePath("BeforeGameObstacle/Viewport")

[node name="GamePlayScene" type="Spatial"]
script = ExtResource( 2 )

[node name="Ground" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1.25751, -0.922769, -1.08539 )
mesh = SubResource( 2 )
material/0 = null

[node name="StaticBody" type="StaticBody" parent="Ground"]
collision_mask = 6

[node name="CollisionShape" type="CollisionShape" parent="Ground/StaticBody"]
shape = SubResource( 3 )

[node name="AppleTree" parent="." instance=ExtResource( 1 )]
transform = Transform( -0.735743, 0, 0.677261, 0, 1, 0, -0.677261, 0, -0.735743, -0.752347, 0.123211, 0.0827933 )

[node name="GUI" type="MeshInstance" parent="."]
transform = Transform( 0.892688, 0, -0.450675, 0, 1, 0, 0.450675, 0, 0.892688, 0.927105, 0.679765, -0.600387 )
mesh = SubResource( 4 )
material/0 = null
script = ExtResource( 4 )

[node name="Viewport" type="Viewport" parent="GUI"]
size = Vector2( 100, 100 )
transparent_bg = true
usage = 1
render_target_v_flip = true

[node name="MarginContainer" type="MarginContainer" parent="GUI/Viewport"]

[node name="VBoxContainer" type="VBoxContainer" parent="GUI/Viewport/MarginContainer"]
margin_right = 47.0
margin_bottom = 32.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="TopRow" type="HBoxContainer" parent="GUI/Viewport/MarginContainer/VBoxContainer"]
margin_right = 47.0
margin_bottom = 14.0

[node name="ScoreTitleContainer" type="MarginContainer" parent="GUI/Viewport/MarginContainer/VBoxContainer/TopRow"]
margin_right = 35.0
margin_bottom = 14.0

[node name="ScoreTitle" type="Label" parent="GUI/Viewport/MarginContainer/VBoxContainer/TopRow/ScoreTitleContainer"]
margin_right = 35.0
margin_bottom = 14.0
text = "Score"
valign = 1

[node name="ScoreContainer" type="MarginContainer" parent="GUI/Viewport/MarginContainer/VBoxContainer/TopRow"]
margin_left = 39.0
margin_right = 47.0
margin_bottom = 14.0

[node name="Score" type="Label" parent="GUI/Viewport/MarginContainer/VBoxContainer/TopRow/ScoreContainer"]
margin_right = 8.0
margin_bottom = 14.0
text = "0"
valign = 1

[node name="BottomRow" type="HBoxContainer" parent="GUI/Viewport/MarginContainer/VBoxContainer"]
margin_top = 18.0
margin_right = 47.0
margin_bottom = 32.0

[node name="RemainingTimeContainer" type="MarginContainer" parent="GUI/Viewport/MarginContainer/VBoxContainer/BottomRow"]
margin_right = 16.0
margin_bottom = 14.0

[node name="RemainingTime" type="Label" parent="GUI/Viewport/MarginContainer/VBoxContainer/BottomRow/RemainingTimeContainer"]
margin_right = 16.0
margin_bottom = 14.0
text = "60"

[node name="ComboContainer" type="MarginContainer" parent="GUI/Viewport/MarginContainer/VBoxContainer/BottomRow"]
margin_left = 20.0
margin_right = 35.0
margin_bottom = 14.0

[node name="Combo" type="Label" parent="GUI/Viewport/MarginContainer/VBoxContainer/BottomRow/ComboContainer"]
margin_right = 15.0
margin_bottom = 14.0
text = "x0"

[node name="Sprite3D" type="Sprite3D" parent="GUI"]
transform = Transform( 1, 0, 5.96046e-08, 0, 1, 0, -5.96046e-08, 0, 1, 0, 0, 0.052539 )
texture = SubResource( 5 )

[node name="BeforeGameObstacle" type="MeshInstance" parent="."]
transform = Transform( 0.910957, 0, -0.4125, 0, 1, 0, 0.4125, 0, 0.910957, -0.132855, 0.890184, -0.0601595 )
mesh = SubResource( 7 )
material/0 = null
script = ExtResource( 5 )

[node name="StaticBody" type="StaticBody" parent="BeforeGameObstacle"]
collision_mask = 6

[node name="CollisionShape" type="CollisionShape" parent="BeforeGameObstacle/StaticBody"]
shape = SubResource( 8 )

[node name="Sprite3D" type="Sprite3D" parent="BeforeGameObstacle"]
transform = Transform( -0.00411895, 0, 0.999992, 0, 1, 0, -0.999992, 0, -0.00411895, 0.110156, 0.0596616, 0.0357904 )
texture = SubResource( 9 )

[node name="Viewport" type="Viewport" parent="BeforeGameObstacle"]
size = Vector2( 100, 100 )
transparent_bg = true
render_target_v_flip = true

[node name="GameStartContdownContainer" type="MarginContainer" parent="BeforeGameObstacle/Viewport"]
margin_left = 50.0
margin_top = 50.0
margin_right = 50.0
margin_bottom = 50.0

[node name="GameStartCountdown" type="Label" parent="BeforeGameObstacle/Viewport/GameStartContdownContainer"]
margin_right = 8.0
margin_bottom = 14.0
text = "5"
align = 1
valign = 1

[node name="RemainingTimeTimer" type="Timer" parent="."]

[node name="GameStartTimer" type="Timer" parent="."]

[node name="ComboTimer" type="Timer" parent="."]
__meta__ = {
"_editor_description_": ""
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[connection signal="timeout" from="RemainingTimeTimer" to="." method="_on_RemainingTimeTimer_timeout"]
[connection signal="timeout" from="GameStartTimer" to="." method="_on_GameStartTimer_timeout"]
[connection signal="timeout" from="ComboTimer" to="." method="_on_ComboTimer_timeout"]
